fix(css): align icon

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -204,6 +204,7 @@ li:before {
   margin-bottom: 0.5rem;
   font-size: 9.5pt;
   padding-left: 0;
+  line-height: 1.2;
 }
 
 .contact-item:before {
@@ -211,7 +212,11 @@ li:before {
 }
 
 .icon {
-  display: none;
+  /* display: none; */
+  margin-right: 0.5rem;
+  width: 1rem;
+  height: 1rem;
+  object-fit: contain;
 }
 
 .oss-item {
@@ -368,10 +373,6 @@ li:before {
 
   .contact-item {
     margin-bottom: 0;
-  }
-
-  .contact-list .icon {
-    display: none;
   }
 
   /* Skills */
